--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     ],
     "require": {
         "php": ">=7.2.0",
+        "ext-json": "*",
         "nyholm/psr7": "^1.4.1",
         "guzzlehttp/guzzle": "^7.4.1",
         "kriswallsmith/buzz": "^1.2.0"
