--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "ext-json": "*",
         "nyholm/psr7": "^1.5.1",
         "guzzlehttp/guzzle": "^7.5.0",
-        "kriswallsmith/buzz": "^1.2.1"
+        "kriswallsmith/buzz": "^1.2.1",
+        "league/oauth2-client": "^2.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5.24"
